@@ -63,16 +63,15 @@ public class LostCityTerrainFeature {
 
     private static int gSeed = 123456789;
     private final int mainGroundLevel;
-    private boolean statesSetup = false;
-    private static BlockState air;
-    private static BlockState hardAir;
+    private final BlockState air;
+    private final BlockState hardAir;
 
+    private BlockState base = null;
     private BlockState liquid;
-    private BlockState base;
 
-    private static Set<BlockState> railStates = null;
-    private static Set<BlockState> statesNeedingTodo = null;
-    private static Set<BlockState> statesNeedingLightingUpdate = null;
+    private Set<BlockState> railStates = null;
+    private Set<BlockState> statesNeedingTodo = null;
+    private Set<BlockState> statesNeedingLightingUpdate = null;
 
     private char street;
     private char streetBase;
@@ -106,12 +105,19 @@ public class LostCityTerrainFeature {
         this.leavesNoise = new NoiseGeneratorPerlin(rand, 4);
         this.ruinNoise = new NoiseGeneratorPerlin(rand, 4);
 
+        air = Blocks.AIR.defaultBlockState();
+        hardAir = Blocks.COMMAND_BLOCK.defaultBlockState();
+
 //        islandTerrainGenerator.setup(provider.getWorld().getWorld(), provider);
 //        cavernTerrainGenerator.setup(provider.getWorld().getWorld(), provider);
 //        spaceTerrainGenerator.setup(provider.getWorld().getWorld(), provider);
     }
 
-    private BlockState getRandomLeaf() {
+    private BlockState getRandomLeaf(BuildingInfo info, CompiledPalette compiledPalette) {
+        Character leavesBlock = info.getCityStyle().getLeavesBlock();
+        if (leavesBlock != null) {
+            return compiledPalette.get(leavesBlock);
+        }
         if (randomLeafs == null) {
             BlockState leaves = Blocks.OAK_LEAVES.defaultBlockState().setValue(LeavesBlock.PERSISTENT, true);
             BlockState leaves2 = Blocks.JUNGLE_LEAVES.defaultBlockState().setValue(LeavesBlock.PERSISTENT, true);
@@ -135,8 +141,22 @@ public class LostCityTerrainFeature {
         return randomLeafs[fastrand128()];
     }
 
-    //Gets rubble block - regenerates list if empty
-    private BlockState getRandomDirt() {
+    private Set<BlockState> getPossibleRandomDirts(BuildingInfo info, CompiledPalette compiledPalette) {
+        Character rubbleDirtBlock = info.getCityStyle().getRubbleDirtBlock();
+        if (rubbleDirtBlock != null) {
+            return compiledPalette.getAll(rubbleDirtBlock);
+        } else {
+            getRandomDirt(info, compiledPalette);
+            return randomDirtSet;
+        }
+    }
+
+    // Gets rubble block - regenerates list if empty
+    private BlockState getRandomDirt(BuildingInfo info, CompiledPalette compiledPalette) {
+        Character rubbleDirtBlock = info.getCityStyle().getRubbleDirtBlock();
+        if (rubbleDirtBlock != null) {
+            return compiledPalette.get(rubbleDirtBlock);
+        }
         if (randomDirt == null) {
             randomDirtSet = new HashSet<>();
             BlockState mBricks = Blocks.MOSSY_STONE_BRICKS.defaultBlockState();
@@ -164,7 +184,7 @@ public class LostCityTerrainFeature {
         return randomDirt[fastrand128()];
     }
 
-    public static Set<BlockState> getRailStates() {
+    private Set<BlockState> getRailStates() {
         if (railStates == null) {
             railStates = new HashSet<>();
             addStates(Blocks.RAIL, railStates);
@@ -173,7 +193,7 @@ public class LostCityTerrainFeature {
         return railStates;
     }
 
-    public static Set<BlockState> getStatesNeedingTodo() {
+    private Set<BlockState> getStatesNeedingTodo() {
         if (statesNeedingTodo == null) {
             statesNeedingTodo = new HashSet<>();
             for (Holder<Block> bh : Tools.getBlocksForTag(BlockTags.SAPLINGS)) {
@@ -186,7 +206,7 @@ public class LostCityTerrainFeature {
         return statesNeedingTodo;
     }
 
-    public static Set<BlockState> getStatesNeedingLightingUpdate() {
+    private Set<BlockState> getStatesNeedingLightingUpdate() {
         if (statesNeedingLightingUpdate == null) {
             statesNeedingLightingUpdate = new HashSet<>();
             for (String s : Config.BLOCKS_REQUIRING_LIGHTING_UPDATES) {
@@ -204,14 +224,9 @@ public class LostCityTerrainFeature {
     }
 
     public void setupStates(LostCityProfile profile) {
-        if (!statesSetup) {
-            air = Blocks.AIR.defaultBlockState();
-            hardAir = Blocks.COMMAND_BLOCK.defaultBlockState();
-
+        if (base == null) {
             base = profile.getBaseBlock();
             liquid = profile.getLiquidBlock();
-
-            statesSetup = true;
         }
     }
 
@@ -1662,21 +1677,18 @@ public class LostCityTerrainFeature {
                     if (c != air && c != liquid) {
                         for (int i = 0; i < vr; i++) {
                             if (isEmpty(driver.getBlock())) {
-                                driver.add(getRandomDirt());
+                                driver.add(getRandomDirt(info, info.getCompiledPalette()));
                             } else {
                                 driver.incY();
                             }
                         }
                     }
                     //first round may not have generated this - stops crash on create world
-                    if(randomDirt == null) {
-                        getRandomDirt();
-                    }
                     BlockState leafBaseState = driver.getBlockDown();
-                    if (leafBaseState == base || randomDirtSet.contains(leafBaseState)) {
+                    if (leafBaseState == base || getPossibleRandomDirts(info, info.getCompiledPalette()).contains(leafBaseState)) {
                         for (int i = 0; i < vl; i++) {
                             if (isEmpty(driver.getBlock())) {
-                                driver.add(getRandomLeaf());
+                                driver.add(getRandomLeaf(info, info.getCompiledPalette()));
                             } else {
                                 driver.incY();
                             }
@@ -1785,7 +1797,7 @@ public class LostCityTerrainFeature {
                                 height++;   // Make sure we keep on filling with air a bit longer because we are lowering here
                                 c = driver.getBlockDown();
                             }
-                            driver.add(getRandomLeaf());
+                            driver.add(getRandomLeaf(info, palette));
                             vl--;
                         } else {
                             driver.add(air);
@@ -2085,7 +2097,7 @@ public class LostCityTerrainFeature {
                     float v = Math.min(.8f, info.profile.CHANCE_OF_RANDOM_LEAFBLOCKS * (info.profile.THICKNESS_OF_RANDOM_LEAFBLOCKS + 1 - x));
                     int cnt = 0;
                     while (VEGETATION_RAND.nextFloat() < v && cnt < 30) {
-                        driver.add(getRandomLeaf());
+                        driver.add(getRandomLeaf(info, info.getCompiledPalette()));
                         cnt++;
                     }
                 }
@@ -2103,7 +2115,7 @@ public class LostCityTerrainFeature {
                     float v = Math.min(.8f, info.profile.CHANCE_OF_RANDOM_LEAFBLOCKS * (x - 14 + info.profile.THICKNESS_OF_RANDOM_LEAFBLOCKS));
                     int cnt = 0;
                     while (VEGETATION_RAND.nextFloat() < v && cnt < 30) {
-                        driver.add(getRandomLeaf());
+                        driver.add(getRandomLeaf(info, info.getCompiledPalette()));
                         cnt++;
                     }
                 }
@@ -2121,7 +2133,7 @@ public class LostCityTerrainFeature {
                     float v = Math.min(.8f, info.profile.CHANCE_OF_RANDOM_LEAFBLOCKS * (info.profile.THICKNESS_OF_RANDOM_LEAFBLOCKS + 1 - z));
                     int cnt = 0;
                     while (VEGETATION_RAND.nextFloat() < v && cnt < 30) {
-                        driver.add(getRandomLeaf());
+                        driver.add(getRandomLeaf(info, info.getCompiledPalette()));
                         cnt++;
                     }
                 }
@@ -2139,7 +2151,7 @@ public class LostCityTerrainFeature {
                     float v = info.profile.CHANCE_OF_RANDOM_LEAFBLOCKS * (z - 14 + info.profile.THICKNESS_OF_RANDOM_LEAFBLOCKS);
                     int cnt = 0;
                     while (VEGETATION_RAND.nextFloat() < v && cnt < 30) {
-                        driver.add(getRandomLeaf());
+                        driver.add(getRandomLeaf(info, info.getCompiledPalette()));
                         cnt++;
                     }
                 }
